json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail25.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail25.json
snapshot_kind: text
---
Ok(
    Array(
        [
            String(
                "\ttab\tcharacter\tin\tstring\t",
            ),
        ],
    ),
)
