json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail26.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail26.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "tab\\   character\\   in\\  string\\  ",
        row: 1,
        column: 38,
    },
)
