json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail29.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail29.json
---
Err(
    ExpectedTokenError {
        expected: [
            Number,
        ],
        actual: Illegal,
        origin: "0e",
        row: 1,
        column: 4,
    },
)
