json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail31.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail31.json
snapshot_kind: text
---
Err(
    ExpectedTokenError {
        expected: [
            Number,
        ],
        actual: Illegal,
        origin: "0e+-1",
        row: 1,
        column: 2,
    },
)
