json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail32.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail32.json
snapshot_kind: text
---
Err(
    ExpectedTokenError {
        expected: [
            String,
        ],
        actual: Eof,
        origin: "",
        row: 1,
        column: 40,
    },
)
