json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail36.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail36.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "this is an unclosed string ]\n",
        row: 1,
        column: 2,
    },
)
