json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail37.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail37.json
snapshot_kind: text
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBracket,
        ],
        actual: Illegal,
        origin: "a",
        row: 1,
        column: 4,
    },
)
