json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail38.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail38.json
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBracket,
        ],
        actual: Illegal,
        origin: "a",
        invalid_row: 1,
        invalid_col: 5,
    },
)
